fix: resolver 7 CVEs y mejorar compatibilidad Windows